Fix overflow in 'Action' section
The text and button now squeezes and wraps, but the text is still overflowing when the window shrinks all the way

--- a/style.css
+++ b/style.css
@@ -168,32 +168,29 @@ img#card {
 
 /* action section */
 .action {
-    background-color: #3882F6;
-    height: 200px;
-    color: #E5E7EB;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 0 auto;
-    margin-bottom: 180px;
-    border-radius: 10px;
+    padding: 180px 160px;
 }
 
-h3 {}
+h3 {
+    font-size: 24px;
+    font-weight: bold;
+    margin: 0;
+}
 
 .box {
-    width: 1100px;
+    background-color: #3882F6;
+    height: 180px;
+    border-radius: 10px;
+    color: #E5E7EB;
+    width: 80%;
     padding: 0 150px;
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-}
-
-.text1 {
-    font-weight: bold;
-    font-size: 24px;
-}
-
-.text2 {
-    font-size: 18px;
+    flex-wrap: wrap;
 }
 
 button#action {
@@ -201,7 +198,6 @@ button#action {
     border: 2px solid white;
     color: white;
     font-weight: 900;
-    margin-right: 150px;
 }
 
 
